<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/linearLayoutLabel">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/fontColor"
            android:text="@string/ip_direction" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/fontColor"
            android:text="@string/Mask"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/linearLayoutInput"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <EditText
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:gravity="center"
                android:maxLength="3"
                android:maxLines="1"
                android:soundEffectsEnabled="true"
                android:textSize="16sp"
                android:hint="@string/dot"
                android:id="@+id/editTextCampo1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/fontColor"
                android:text="@string/dot" />
            <EditText
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLength="3"
                android:maxLines="1"
                android:textSize="16sp"
                android:inputType="number"
                android:hint="@string/dot"
                android:id="@+id/editTextCampo2"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/fontColor"
                android:text="@string/dot"/>
            <EditText
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLength="3"
                android:maxLines="1"
                android:textSize="16sp"
                android:inputType="number"
                android:hint="@string/dot"
                android:id="@+id/editTextCampo3"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/fontColor"
                android:text="@string/dot"/>
            <EditText
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLength="3"
                android:maxLines="1"
                android:textSize="16sp"
                android:inputType="number"
                android:hint="@string/dot"
                android:id="@+id/editTextCampo4"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">
            <EditText
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLength="2"
                android:maxLines="1"
                android:textSize="16sp"
                android:inputType="number"
                android:hint="@string/dot"
                android:id="@+id/editTextMask"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/netIDLayout">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:textColor="@color/fontColor"
            android:text="@string/net_id"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="start"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:text=""
            android:id="@+id/textViewNetID"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/broadcastLayout">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:paddingEnd="6dp"
            android:paddingRight="6dp"
            android:paddingStart="6dp"
            android:paddingLeft="6dp"
            android:textColor="@color/fontColor"
            android:text="@string/broadcast"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="start"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:text=""
            android:id="@+id/textViewBroadcast"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/redAndHostLayout">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:paddingEnd="6dp"
            android:paddingRight="6dp"
            android:paddingStart="6dp"
            android:paddingLeft="6dp"
            android:textColor="@color/fontColor"
            android:text="@string/parte_de_red"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="start"
            android:paddingEnd="6dp"
            android:paddingRight="6dp"
            android:paddingStart="6dp"
            android:paddingLeft="6dp"
            android:text=""
            android:id="@+id/textViewParteDeRed"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:paddingEnd="6dp"
            android:paddingRight="6dp"
            android:paddingStart="6dp"
            android:paddingLeft="6dp"
            android:textColor="@color/fontColor"
            android:text="@string/parte_de_host"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="start"
            android:paddingEnd="6dp"
            android:paddingRight="6dp"
            android:paddingStart="6dp"
            android:paddingLeft="6dp"
            android:text=""
            android:id="@+id/textViewParteDeHost"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:paddingEnd="6dp"
            android:paddingRight="6dp"
            android:paddingStart="6dp"
            android:paddingLeft="6dp"
            android:textColor="@color/fontColor"
            android:text="@string/direcciones_disponibles"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text=""
            android:id="@+id/textViewIPDisponibles"/>
    </LinearLayout>
</LinearLayout>